Добавлены тесты для FileTextExtractor